@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.64.00
 
+              pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
+              (September 2009).
+
 13.06.29 BJH  Release 10.63.00
 
               Add pamtowinicon, winicontopam.  Thanks Ludolf Holzheid
